--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^3.4.7",
     "jsbarcode": "^3.11.0",
     "mui-datatables": "^2.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
