--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^3.4.7",
+    "firebase": "^7.8.2",
+    "firebaseui": "^4.4.0",
     "jsbarcode": "^3.11.0",
     "mui-datatables": "^2.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-firebaseui": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
