--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux-thunk": "^2.3.0",
+    "source-map-explorer": "^2.3.1",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5",
     "uuid": "^3.4.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
